﻿Changelog
---------
1.21 *developing*

*world*
- Pets gain xp and level up.
- Pets can drink 'medicine' even when they aren't hungry. Note: They still only heal for a base amount.
- New bag item backpack. Still missing the porting and questing steps.
- Fire, Ice, and Light arrows now defined in ammunition.xml ready to be quest rewards.

*fixes*
- Help For the Harvest quest should work again.

1.20

*world*
- Humans lose conscious when scuba gear is take off under water
- Improved thunderstorms
- Archer combat is now visible
- Harold understands "prolong all" now

*code*
- Support Postgres databases in addition to H2 (recommended) and MySQL
- Setup Travis for continuous integration tests and fixed some order dependent tests 
- Migrated test coverage analysis from Cobertura to Jacoco 
- Git repository is mirrored instantaneously between Github and Sourceforge in both directions
- Yearly special event quests now pick up the current year as part of their quest slot automatically
- Backend for puzzles

*fixes*
- Christmas quest "Goodies for Rudolph" is now repeatable next year
- Fixed maximization state being sometimes saved incorrectly.
- Database index are now created automatically




1.19

*world*
- new interesting under water zone
- new quest for a scuba diving license
- new Kraken creature
- Zekiel can make enhanced lion shields
- Cats can drink milk now
- map improvements

*code*
- fixed compiler warnings and code cleanup

*client*
- added cancel buttons on all dialog boxes (for window managers which do not add an X to the title bar)




1.18
18th August 2015

*world*
- a half elf girl and an distillery customer share their stories at Ados market
- Improving dialogue of Lil Johnnny
- Saskia sells umbrellas


*website*
- zone names labels on world map
- http://arianne.sourceforge.net is moving to https://arianne-project.org

*fixes*
- fixed status resistance items being forgetting their status value